syntax = "proto3";

option csharp_namespace = "GrpcService";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
  rpc AskForRent (RentRequest) returns (RentReply);
}

// The request message containing the user's name.
message RentRequest {
  string message = 1;
}

// The request message containing the user's name.
message RentReply {
  string message = 1;
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}
